--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@towns-protocol/bot": "^0.0.393",
     "@towns-protocol/proto": "^0.0.393",
     "@towns-protocol/web3": "^0.0.393",
+    "bad-words": "^4.0.0",
     "hono": "^4.7.11",
     "viem": "^2.29.3"
   },
@@ -25,6 +26,7 @@
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
+    "bun-types": "^1.3.1",
     "eslint": "^8.57.1",
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-import-x": "^4.10.2",
